@@ -432,6 +432,9 @@ Release 2.7.3 - UNRELEASED
     YARN-4917. Fix typos in documentation of Capacity Scheduler.
     (Takashi Ohnishi via iwasakims)
 
+    YARN-4924. NM recovery race can lead to container not cleaned up.
+    (sandflee via jlowe)
+
 Release 2.7.2 - 2016-01-25
 
   INCOMPATIBLE CHANGES
